--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -175,7 +175,7 @@
     {% block content %}
 
     {% endblock %}
-    <div class="text-9xl text-green-900 text-center mt-20 ">
+    <div class="text-5xl text-green-900 text-center mt-20 md:text-8xl lg:w-full ">
       <div>Farmer support</div>
       <img src="" alt="">
     </div>
