--- a/shop/templates/shop/show_product_search.html
+++ b/shop/templates/shop/show_product_search.html
@@ -51,7 +51,7 @@
         {% if i.quantity > 0 %}
         <a class="hover:scale-105 transform transition duration-300 ease-in-out "
             href="{% url 'Showdetall_product' i.id %}">
-            <div class="border bg-gray-300 rounded-lg h-full">
+            <div class="border bg-green-100 rounded-lg h-full">
                 <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
                 <div class="p-4">
                     <h5 class="text-lg font-semibold">
