--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -62,6 +62,7 @@
                             {{ item.price }}
                         </td>
                         <td x-data="{ open: false }" class="text-center  mt-10 mb-10">
+                            
                             <button @click="open = true"
                                 class="my-2 h-12 bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded items-center justify-center">
                                 <i class="fa-solid fa-trash"></i>&nbsp;&nbsp;ลบ
@@ -87,8 +88,10 @@
             </table>
             <div class="flex justify-center space-x-20 mt-3 mb-3">
                 <a href="{% url 'show_product' %}"
-                    class="bg-blue-500 text-white px-4 py-2  rounded-md hover:bg-blue-700">เช่าอุปกรณ์</a>
+                    class="bg-blue-500 text-white px-4 py-2  rounded-md hover:bg-blue-700">เช่าอุปกรณ์เพิ่มเติม</a>
             </div>
+            
+            
         </div>
     </div>
 </body>
