--- a/shop/templates/shop/show_product_search.html
+++ b/shop/templates/shop/show_product_search.html
@@ -15,7 +15,11 @@
                     class="bg-green-600 hover:bg-green-800 px-4 py-2 rounded-r-md text-white focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 focus:ring-offset-green-700">ค้นหา</button>
             </form>
         </div>
+       
         <div class=" flex justify-end mx-7 mt-5">
+            <form action="{% url 'sell_product' %}">
+                <button type="submit" class="bg-blue-500 text-white px-5 py-2 rounded-lg mr-8 text-sm">ปล่อยเช่าอุปกรณ์</button>
+            </form>
             <a href="{% url 'cart' %}">
                 <i class="fa-solid fa-cart-plus text-3xl"></i>
             </a>
@@ -31,7 +35,7 @@
 </div>
 
 <div class="lg:flex">
-    <div class="w-full lg:w-96 bg-gray-400">
+    <div class="w-full lg:w-72 h-screen bg-gray-400">
         <p class="text-lg font-semibold mb-4 text-center">หมวดหมู่</p>
 
         <ul class="text-center flex justify-between lg:grid lg:grid-cols-1 p-2">
@@ -40,16 +44,12 @@
             <li><a href="#">หมวดหมู่ 3</a></li>
         </ul>
     </div>
-    <div class="grid grid-cols-2 lg:grid-cols-6 gap-3 m-2 col-start-2">
-        <div class="sell_product fixed bottom-4 right-4 md:pb-28 lg:pb-4 ">
-            <form action="{% url 'sell_product' %}">
-                <button type="submit" class="bg-blue-500 text-white px-5 py-2 rounded-lg">ปล่อยเช่าอุปกรณ์</button>
-            </form>
-        </div>
+    <div class="grid grid-cols-2 lg:grid-cols-6 gap-3 m-2 col-start-2 ">
+        
         {% if show_product %}
         {% for i in show_product %}
         {% if i.quantity > 0 %}
-        <a class="hover:scale-105 transform transition duration-300 ease-in-out "
+        <a class="hover:scale-105 transform transition h-fit duration-300 ease-in-out "
             href="{% url 'Showdetall_product' i.id %}">
             <div class="border bg-green-100 rounded-lg h-full">
                 <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
@@ -97,78 +97,6 @@
 
 
 
-<!-- 
-
-<div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-4">
-    <div class="md:col-span-1">
-
-        <div class=" rounded-lg p-4 h-full ">
-            <h3 class="text-lg font-semibold mb-4 text-center">หมวดหมู่</h3>
-
-            <ul class="text-center md:flex-wrap">
-                <li><a href="#">หมวดหมู่ 1</a></li>
-                <li><a href="#">หมวดหมู่ 2</a></li>
-                <li><a href="#">หมวดหมู่ 3</a></li>
-
-
-            </ul>
-        </div>
-    </div>
-    <div class="md:col-span-5 mx-5 my-5">
-
-
-        <div class="grid grid-cols-2 md:grid-cols-6 gap-4">
-            <div class="sell_product fixed bottom-4 right-4 md:pb-28 lg:pb-4 ">
-                <form action="{% url 'sell_product' %}">
-                    <button type="submit" class="bg-blue-500 text-white px-5 py-2 rounded-lg">ปล่อยเช่าอุปกรณ์</button>
-                </form>
-            </div>
-            {% if show_product %}
-            {% for i in show_product %}
-            {% if i.quantity > 0 %}
-            <a class="hover:scale-105 transform transition duration-300 ease-in-out " href="{% url 'Showdetall_product' i.id %}">
-                <div class="border bg-gray-300 rounded-lg h-full">
-                    <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
-                    <div class="p-4">
-                        <h5 class="text-lg font-semibold">
-                            {% if i.id %}
-                            <div class="text-blue-500">{{ i.product_name }}</div>
-                            {% else %}
-                            <span class="text-red-500">No ID available for this product</span>
-                            {% endif %}
-                        </h5>
-                        <p class="text-gray-800">ราคา: {{ i.product_price }}</p>
-                        <p class="text-gray-800">สถานะอุปกรณ์: {{ i.product_status }}</p>
-                        <p class="text-gray-800">ที่อยู่อุปกรณ์: {{ i.product_location }}</p>
-                    </div>
-                </div>
-            </a>
-            {% else %}
-
-            <div class="border bg-red-300 rounded-lg h-full">
-                <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
-                <div class="p-4">
-                    <h5 class="text-lg font-semibold">
-                        {% if i.id %}
-                        <div class="text-blue-500">{{ i.product_name }}</div>
-                        {% else %}
-                        <span class="text-red-500">No ID available for this product</span>
-                        {% endif %}
-                    </h5>
-                    <p class="text-gray-800">ราคา: {{ i.product_price }}</p>
-                    <p class="text-gray-800">สถานะอุปกรณ์: หมด</p>
-                    <p class="text-gray-800">ที่อยู่อุปกรณ์: {{ i.product_location }}</p>
-                </div>
-            </div>
-
-            {% endif %}
-            {% endfor %}
-            {% else %}
-            ไม่มีรายการที่ตรงกัน
-            {% endif %}
-        </div>
-    </div>
-</div> -->
 
 
 
