--- a/user/templates/users/edit_profile.html
+++ b/user/templates/users/edit_profile.html
@@ -6,21 +6,35 @@
 {% load crispy_forms_tags %}
 
 
-<div class="text-center text-xl font-bold">
-    <p>แก้ไขโปรไฟล์</p>
-</div>
-
-<div class="flex justify-center gap-4 mt-10 mb-10">
-    <div class="max-w-96">
-        <form action="" method="post">
-            {% csrf_token %}
-            {{ form|crispy }}
-            {{ profile|crispy }}
-            <div class="mt-2 text-center">
-                <button type="submit" class="bg-yellow-600 text-gray-800 rounded hover:scale-105 border border-gray-500 p-2 px-5">บันทึก</button>
+<body class=" "
+    style="background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg);">
+    <div class="w-full h-full flex justify-center items-center">
+        <div class="relative rounded overflow-hidden  w-1/2 h-full  bg-gray-900 bg-opacity-50 shadow-lg">
+            <div class="absolute inset-0 bg-gray-900 bg-opacity-50 filter blur-2xl "></div>
+            <div class="relative z-10 mt-10 text-center text-white">
+                <div class="text-center text-xl font-bold">
+                    <p>แก้ไขโปรไฟล์</p>
+                </div>
+                
+                <div class="flex justify-center gap-4 mt-10 mb-10">
+                    <div class="max-w-96">
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            {{ form|crispy }}
+                            {{ profile|crispy }}
+                            <div class="mt-2 text-center">
+                                <button type="submit" class="bg-yellow-600 text-gray-800 rounded hover:scale-105 border border-gray-500 p-2 px-5">บันทึก</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-        </form>
+            
+        </div>
     </div>
-</div>
+</body>
+
+
+
 
 {% endblock %}
