--- a/shop/templates/shop/advice.html
+++ b/shop/templates/shop/advice.html
@@ -11,7 +11,7 @@
 </div>
 <div class="flex justify-center mt-16">
     <form action="{% url 'location' %}">
-        <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-lg w-32">ยอมรับ</button>
+        <button type="submit" class="bg-blue-500 text-4xl text-white px-4 py-2 rounded-lg w-96 h-24 lg:w-36 lg:h-10 lg:text-xl">ยอมรับ</button>
     </form>
 </div>
 
