--- a/main/templates/main/tobar2.html
+++ b/main/templates/main/tobar2.html
@@ -1,58 +1,53 @@
-
 <nav class="mx-auto flex  bg-[#215d38] items-center justify-between p-3 lg:px-8 shadow-xl" aria-label="Global ">
-    <div class="flex lg:flex-1  ">
-      <a href="{% url 'home' %}" class="">
-        <span class="sr-only">Your Company</span>
-        <img class="h-16 w-auto rounded-full" src="https://github.com/Thirawat64/project-farmers/blob/thirawat/farmers/static/logo.jpg?raw=true" alt="">
-      </a>
-    </div>
-    
-    <!-- <div class="hidden lg:flex lg:flex-1 justify-center">
+  <div class="flex lg:flex-1  ">
+    <a href="{% url 'home' %}" class="">
+      <span class="sr-only">Your Company</span>
+      <img class="h-16 w-auto rounded-full"
+        src="https://github.com/Thirawat64/project-farmers/blob/thirawat/farmers/static/logo.jpg?raw=true" alt="">
+    </a>
+  </div>
+
+  <!-- <div class="hidden lg:flex lg:flex-1 justify-center">
         <form action="#" method="GET" class="flex max-w-sm">
             <input type="text" name="search" placeholder="Search..." class="px-4 py-2 rounded-l-md focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent bg-green-100 w-96">
             <button type="submit" class="bg-green-600 hover:bg-green-800 px-4 py-2 rounded-r-md text-white focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 focus:ring-offset-green-700">ค้นหา</button>
         </form>
     </div> -->
-    
-    <div class="flex lg:hidden bg-[#166534]">
-      <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
-        <span class="sr-only">Open main menu</span>
-        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-        </svg>
-      </button>
+
+  
+
+  <header class="items-center py-2 px-6 hidden sm:flex">
+    <div class="w-1/2"></div>
+    <div x-data="{ isOpen: false }" class="relative flex justify-end">
+        <button @click="isOpen = !isOpen"
+            class="relative z-20 w-12 h-12 rounded-full overflow-hidden border-4 border-gray-400 hover:border-gray-300 focus:border-gray-300 focus:outline-none">
+            <img src="https://www.iconpacks.net/icons/2/free-user-icon-3297-thumb.png" alt="User Icon">
+        </button>
+        <button x-show="isOpen" @click="isOpen = false"
+            class="h-full w-full fixed inset-0 cursor-default z-10"></button>
+
+        <div x-show="isOpen" class="absolute right-0 w-32 bg-white rounded-lg shadow-lg py-2 mt-16 z-20">
+            {% if user.is_authenticated %}
+            <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link hover:bg-gray-200">{{ user.username }}</a>
+            <a href="{% url 'logout' %}" class="block px-4 py-2 account-link hover:bg-gray-200">ออกจากระบบ</a>
+            {% else %}
+            <a href="{% url 'login' %}" class="block px-4 py-2 account-link hover:bg-gray-200">เข้าสู่ระบบ</a>
+            <a href="{% url 'register' %}" class="block px-4 py-2 account-link hover:bg-gray-200">สมัครสมาชิก</a>
+            {% endif %}
+            <a href="{% url 'home' %}" class="block px-4 py-2 account-link hover:bg-gray-200">หน้าแรก</a>
+            <a href="{% url 'help' %}" class="block px-4 py-2 account-link hover:bg-gray-200">ช่วยเหลือ</a>
+            <a href="{% url 'about' %}" class="block px-4 py-2 account-link hover:bg-gray-200">เกี่ยวกับ</a>
+        </div>
     </div>
-    
-    <header class="items-center  py-2 px-6 hidden sm:flex">
-      <div class="w-1/2"></div>
-      <div x-data="{ isOpen: false }" class="relative flex justify-end">
-          <button @click="isOpen = !isOpen"
-              class="relative z-10 w-12 h-12 rounded-full overflow-hidden border-4 border-gray-400 hover:border-gray-300 focus:border-gray-300 focus:outline-none  ">
-              <img src="https://www.iconpacks.net/icons/2/free-user-icon-3297-thumb.png">
-          </button>
-          <button x-show="isOpen" @click="isOpen = false"
-              class="h-full w-full fixed inset-0 cursor-default"></button>
+</header>
+
+
   
-          <div x-show="isOpen" class="absolute w-32 bg-white rounded-lg shadow-lg py-2 mt-16 fixed">
-              {% if user.is_authenticated %}
-              <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link hover:text-white">{{ user.username }}</a>
-              <a href="{% url 'logout' %}" class="block px-4 py-2 account-link hover:text-white">ออกจากระบบ</a>
-              {% else %}
-              <a href="{% url 'login' %}" class="block px-4 py-2 account-link hover:text-white">เข้าสู่ระบบ</a>
-              <a href="{% url 'register' %}" class="block px-4 py-2 account-link hover:text-white">สมัครสมาชิก</a>
-              {% endif %}
-              <a href="{% url 'home' %}" class="block px-4 py-2 account-link hover:text-white">หน้าแรก</a>
-              <a href="{% url 'help' %}" class="block px-4 py-2 account-link hover:text-white">ช่วยเหลือ</a>
-              <a href="{% url 'about' %}" class="block px-4 py-2 account-link hover:text-white">เกี่ยวกับ</a>
-          </div>
-      </div>
-  </header>
-  
-    
+
 </nav>
 
-  <!-- AlpineJS -->
-  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-  <!-- Font Awesome -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
-    integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
+<!-- AlpineJS -->
+<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+<!-- Font Awesome -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
+  integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
