--- a/prediction/templates/prediction/predict.html
+++ b/prediction/templates/prediction/predict.html
@@ -1,57 +1,90 @@
-{% extends 'main/base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Data Input Form</title>
+  
+</head>
+{% extends 'main/home.html' %}
+{% load static %}
 
 {% block content %}
-<div class="bg-gray-200 p-8">
-  <div class="max-w-md mx-auto bg-white p-6 rounded-md shadow-md">
+
+  <div class="max-w-md mx-auto bg-white p-6 rounded-md shadow-md mt-5">
     <h2 class="text-2xl font-semibold mb-4 text-center" >กรอกข้อมูลเพื่อทำนายพืชที่เหมาะในพื้นที่ของคุณ</h2>
 
+    <div class="form-container" style="height: 450px; overflow-y: auto;">
+      <form action="{% url 'predict' %}" method="POST">
+        {% csrf_token %}
+        <div class="mb-4">
+          <label for="ph" class="block text-gray-600">ชื่อแปลง:</label>
+          <input type="text" id="name_area" name="name_area" placeholder="ตั้งชื่อพื้นที่ของคุณ" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500" step="any" required>
+        </div>
+  
+        <div class="mb-4">
+          <label for="ph" class="block text-gray-600">ค่า ความเป็นกรด เป็นด่างของดิน:</label>
+          <input type="number" id="ph_value" name="ph_value" placeholder="ตัวอย่างเช่น '6.5'" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500" step="any" required>
+        </div>      
+  
+        <div class="mb-4">
+          <label for="temperature" class="block text-gray-600">อุณหภูมิ สูงสุดเฉลี่ย(องศาเซลเซียส):</label>
+          <input type="number" id="max_temperature" name="max_temperature" placeholder="ตัวอย่างเช่น '35'" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500" step="any" required>
+        </div>
+  
+        <div class="mb-4">
+          <label for="humidity" class="block text-gray-600">ความชื่นเฉลี่ย(เปอร์เซน):</label>
+          <input type="number" id="humidity" name="humidity" placeholder="ตัวอย่างเช่น '60'" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500" step="any" required>
+        </div>
+  
+        <div class="mb-4">
+          <label for="rainfall" class="block text-gray-600">ปริมาณน้ำฝนต่อปี(มิลลิเมตร):</label>
+          <input type="number" id="precip" name="precip" placeholder="ตัวอย่างเช่น '1800'" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500" step="any" required>
+        </div>
+  
+        <div class="mb-4">
+          <label for="soilType" class="block text-gray-600">ชนิดของดิน:</label>
+          <select id="soil_type" name="soil_type" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+            <option value="ดินเหนียว">ดินเหนียว</option>
+            <option value="ดินร่วน">ดินร่วน</option>
+            <option value="ดินทราย">ดินทราย</option>
+          </select>
+        </div>
+  
+        <div class="mb-4">
+          <label for="slope" class="block text-gray-600">ความลาดชันของพื้นที่(องศา):</label>
+          <input type="number" id="area_slope" name="area_slope" placeholder="ตัวอย่างเช่น '10'" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500" step="any" required>
+        </div>
+  
+        <div class="mb-4">
+          <label for="drainage" class="block text-gray-600">การระบายน้ำของพื้นที่:</label>
+          <select id="drainage" name="drainage" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+            <option value="ระบายน้ำได้">ระบายน้ำได้</option>
+            <option value="ไม่สามารถระบายน้ำได้">ไม่สามารถระบายน้ำได้</option>
+          </select>
+        </div>
+  
+        <div class="flex justify-center space-x-20 mt-3">
+          <a href="{% url 'show_data_save_predict' %}"class="bg-blue-500 text-white px-4 py-2  rounded-md hover:bg-blue-700">ดูประวัติ</a>
+          <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-700">ทำนาย</button>
+      </div>
+      </form>
+      <div class=" rounded-lg w-auto hover:text-blue-700 text-center mt-5 ">
+        <a href="https://www.visualcrossing.com/weather-data">
+          <button class="bg-white rounded-lg w-48">ข้อมูลสภาพอากาศคลิก</button>
+        </a>
+      </div>
+    </div>
     
-    <form action="{% url 'predict' %}" method="POST">
-      {% csrf_token %}
-      <div class="mb-4">
-        <label for="ph" class="block text-gray-600">ค่า ความเป็นกรด เป็นด่างของดิน:</label>
-        <input type="number" id="ph_value" name="ph_value" placeholder="ตัวอย่างเช่น '6.5'" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500" step="any">
-      </div>      
-
-      <div class="mb-4">
-        <label for="temperature" class="block text-gray-600">อุณหภูมิ สูงสุดเฉลี่ย(องศาเซลเซียส):</label>
-        <input type="number" id="max_temperature" name="max_temperature" placeholder="ตัวอย่างเช่น '35'" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500" step="any">
-      </div>
-
-      <div class="mb-4">
-        <label for="humidity" class="block text-gray-600">ความชื่นเฉลี่ย(เปอร์เซน):</label>
-        <input type="number" id="humidity" name="humidity" placeholder="ตัวอย่างเช่น '60'" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500" step="any">
-      </div>
-
-      <div class="mb-4">
-        <label for="rainfall" class="block text-gray-600">ปริมาณน้ำฝนเฉลี่ย(มิลลิเมตร):</label>
-        <input type="number" id="precip" name="precip" placeholder="ตัวอย่างเช่น '1800'" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500" step="any">
-      </div>
-
-      <div class="mb-4">
-        <label for="soilType" class="block text-gray-600">ชนิดของดิน:</label>
-        <select id="soil_type" name="soil_type" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500">
-          <option value="ดินเหนียว">ดินเหนียว</option>
-          <option value="ดินร่วน">ดินร่วน</option>
-          <option value="ดินทราย">ดินทราย</option>
-        </select>
-      </div>
-
-      <div class="mb-4">
-        <label for="slope" class="block text-gray-600">ความลาดชันของพื้นที่(องศา):</label>
-        <input type="number" id="area_slope" name="area_slope" placeholder="ตัวอย่างเช่น '10'" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500" step="any">
-      </div>
-
-      <div class="mb-4">
-        <label for="drainage" class="block text-gray-600">การระบายน้ำของพื้นที่:</label>
-        <select id="drainage" name="drainage" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500">
-          <option value="ระบายน้ำได้">ระบายน้ำได้</option>
-          <option value="ไม่สามารถระบายน้ำได้">ไม่สามารถระบายน้ำได้</option>
-        </select>
-      </div>
-
-      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-700">ทำนาย</button>
-    </form>
   </div>
-</div>
+
+    <div class=" rounded-lg w-auto hover:text-blue-800 text-center mt-5">
+      <a href="https://www.visualcrossing.com/weather-data">
+        <button class="bg-white rounded-lg w-48">ข้อมูลสภาพอากาศคลิก</button>
+      </a>
+    </div>
+
+  
+  
 {% endblock %}
+</html>
