--- a/user/templates/users/dashboard.html
+++ b/user/templates/users/dashboard.html
@@ -4,11 +4,10 @@
 {% block content %}
 
 
-<body class=" "
-    style="background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg);">
-    <div class="w-full h-full flex justify-center items-center">
-        <div class="relative rounded overflow-hidden  w-1/2 h-full  bg-gray-900 bg-opacity-50 shadow-lg">
-            <div class="absolute inset-0 bg-gray-900 bg-opacity-50 filter blur-2xl "></div>
+<body style="background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg);">
+    <div class="w-full h-full flex justify-center  mt-20 ">
+        <div class="relative rounded overflow-hidden  w-1/2 h-fit  bg-gray-900 bg-opacity-50 shadow-lg">
+            <div class="absolute inset-0 bg-gray-900 bg-opacity-50 filter blur-2xl h-full "></div>
             <div class="relative z-10 mt-10 text-center text-white">
                 <div class="mb-8 ">
                     <h4 class=" text-xl">จัดการกับบัญชี-ประวัติการเช่า</h4>
@@ -30,19 +29,37 @@
                     <p class="">เบอร์โทรศัพท์</p>
                     <div class="loca  pl-8">{{user.Profile.first.phon_numbers}}</div>
                 </div>
+
+
                 <div class="mb-8 text-left pl-4 ">
+
                     <p class="">รายการเช่าอุปกรณ์ล่าสุด</p>
+                    <form action="{% url 'Edit_buy_product' %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit"
+                            class="p-2 border w-full text-[#000] bg-gray-200 rounded-md">ดูรายการเช่า</button>
+                    </form>
+
+
                 </div>
                 
                 <div class="mb-8 text-left pl-4 ">
+
                     <p class="">รายการปล่อยเช่าอุปกรณ์ล่าสุด</p>
+                    <form action="{% url 'Edit_sell_product' %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit"
+                            class="p-2 border w-full text-[#000] bg-gray-200 rounded-md">ดูรายการปล่อยเช่า</button>
+                    </form>
+
+
                 </div>
 
 
-
+                {% if user.Profile.first %}
                 <a href="{% url 'editprofile' %}">
                     <div
-                        class="my-2 flex h-12 items-center justify-center rounded-lg text-white bg-slate-700 hover:bg-slate-900 m-20">
+                        class="my-2 flex h-12 mb-10 items-center justify-center rounded-lg text-white bg-slate-700 hover:bg-slate-900 m-20">
                         <div class="flex items-center">
                             <div class="ml-2 ">
                                 <div class=""><i class="fa-solid fa-user-pen"></i>&nbsp;&nbsp;แก้ไขโปรไฟล์</div>
@@ -50,8 +67,21 @@
                         </div>
                     </div>
                 </a>
+                {% else %}
+
+                <a href="{% url 'add_profile' %}">
+                    <div
+                        class="my-2 flex h-12 mb-10 items-center justify-center rounded-lg text-white bg-yellow-800 hover:bg-yellow-900 m-20">
+                        <div class="flex items-center">
+                            <div class="ml-2 ">
+                                <div class=""><i class="fa-solid fa-user-pen"></i>&nbsp;&nbsp;เพิ่มโปรไฟล์</div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                {% endif %}
             </div>
-            
+
         </div>
     </div>
 </body>
