--- a/main/templates/main/tobar2.html
+++ b/main/templates/main/tobar2.html
@@ -1,4 +1,4 @@
-<nav class="mx-auto flex  bg-[#215d38] items-center justify-between p-3 lg:px-8 shadow-xl" aria-label="Global ">
+<nav class="mx-auto flex  bg-green-500 items-center justify-between p-3 lg:px-8 shadow-xl" aria-label="Global ">
   <div class="flex lg:flex-1  ">
     <a href="{% url 'home' %}" class="">
       <span class="sr-only">Your Company</span>
@@ -20,7 +20,7 @@
     <div class="w-1/2"></div>
     <div x-data="{ isOpen: false }" class="relative flex justify-end">
         <button @click="isOpen = !isOpen"
-            class="relative z-20 w-12 h-12 rounded-full overflow-hidden border-4 border-gray-400 hover:border-gray-300 focus:border-gray-300 focus:outline-none">
+            class="relative z-20 w-12 h-12 rounded-full overflow-hidden border-4 border-white hover:border-gray-300 focus:border-gray-300 focus:outline-none">
             <img src="https://www.iconpacks.net/icons/2/free-user-icon-3297-thumb.png" alt="User Icon">
         </button>
         <button x-show="isOpen" @click="isOpen = false"
