--- a/shop/templates/shop/sell_product.html
+++ b/shop/templates/shop/sell_product.html
@@ -41,14 +41,20 @@
                 <input type="text" id="product_name" name="product_name" value="" class="form-input bg-gray-100 h-10 rounded-md">
             </div>
             <div class="flex flex-col">
-                <label for="product_statustype" class="text-lg font-medium mb-2">ประเภทอุปกรณ์:</label>
-                <input type="text" id="product_statustype" name="product_statustype" value="" class="form-input bg-gray-100 h-10 rounded-md">
+                <label for="product_statustype" class="text-lg font-medium mb-2">หมวดหมู่อุปกรณ์:</label>
+                
+                <select id="category" name="category" class="bg-gray-50 border  text-gray-100 text-sm rounded-lg  block w-full p-2.5 dark:bg-gray-100   dark:text-black">
+                    <option selected>เลือกหมวดหมู่</option>
+                    {% for categorys in category %}
+                    <option value="{{ categorys.id }}">{{ categorys.category_name }}</option>
+                    {% endfor %}
+                  </select>
             </div>
         </div>
         
         <div class="mt-6">
             <label for="product_status" class="text-lg font-medium mb-2">สถานะอุปกรณ์:</label>
-            <select id="product_status" name="product_status" class="form-select bg-gray-100 h-10 rounded-md">
+            <select id="status" name="status" class="form-select bg-gray-100 h-10 rounded-md">
                 {% for status in status %}
                 <option value="{{ status.id }}" {% if allproduct_instance.product_status == status %}selected{% endif %}>{{status.name_Status }}</option>
                 {% endfor %}
@@ -58,11 +64,11 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-6">
             <div class="flex flex-col">
                 <label for="product_size" class="text-lg font-medium mb-2">ขนาดอุปกรณ์:</label>
-                <input type="text" id="product_size" name="product_size" value="0" class="form-input bg-gray-100 h-10 rounded-md">
+                <input type="text" id="product_size" name="product_size" value="-" class="form-input bg-gray-100 h-10 rounded-md">
             </div>
             <div class="flex flex-col">
                 <label for="product_detail" class="text-lg font-medium mb-2">รายละเอียดอุปกรณ์:</label>
-                <textarea id="product_detail" name="product_detail" class="form-textarea bg-gray-100 h-24 rounded-md">0</textarea>
+                <textarea id="product_detail" name="product_detail" class="form-textarea bg-gray-100 h-24 rounded-md">-</textarea>
             </div>
         </div>
         
@@ -80,7 +86,7 @@
         <div class="mt-6 flex items-center gap-4">
             <div class="flex flex-col w-full">
                 <label for="product_price" class="text-lg font-medium mb-2">ราคา:</label>
-                <input type="number" id="product_price" name="product_price" value="100" class="form-input bg-gray-100 h-10 rounded-md">
+                <input type="number" id="product_price" name="product_price" value="0" class="form-input bg-gray-100 h-10 rounded-md">
             </div>
             <div class="flex flex-col w-full">
                 <label for="quantity" class="text-lg font-medium mb-2">จำนวนที่ต้องการปล่อย:</label>
