--- a/user/templates/users/edit_sell_product.html
+++ b/user/templates/users/edit_sell_product.html
@@ -17,6 +17,7 @@
                     <th scope="col" class="px-4 lg:px-6 py-3">ชื่ออุปกรณ์</th>
                     <th scope="col" class="px-4 lg:px-6 py-3">จำนวน</th>
                     <th scope="col" class="px-4 lg:px-6 py-3">ราคา</th>
+                    <th scope="col" class="px-4 lg:px-6 py-3">รูป</th>
                     <th scope="col" class="px-4 lg:px-6 py-3 text-center">การดำเนินการ</th>
                 </tr>
             </thead>
@@ -26,10 +27,11 @@
                     <td class="w-4 p-4">
                         <div class="flex items-center"></div>
                     </td>
-                    <td class="px-4 lg:px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ i.product.user }}</td>
-                    <td class="px-4 lg:px-6 py-4">{{ i.product.product_name }}</td>
+                    <td class="px-4 lg:px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ i.user }}</td>
+                    <td class="px-4 lg:px-6 py-4">{{ i.product_name }}</td>
                     <td class="px-4 lg:px-6 py-4">{{ i.quantity }}</td>
-                    <td class="px-4 lg:px-6 py-4">{{ i.product.image.url }}</td>
+                    <td class="px-4 lg:px-6 py-4">{{ i.product_price }}</td>
+                    <td class="px-4 lg:px-6 py-4 w-28"><img src="{{ i.image.url }}" alt=""></td>
                     <td x-data="{ open: false }" class="text-center mt-10 mb-10">
                         <button @click="open = true"
                             class="my-2 h-12 bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded items-center justify-center">
