--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -122,7 +122,7 @@
     <!-- Mobile Header & Nav -->
     <header x-data="{ isOpen: false }" class="w-full bg-green-500 py-5 px-6 sm:hidden">
       <div class="flex items-center justify-between">
-        <a href="#" class="text-white text-3xl font-semibold uppercase hover:text-gray-300">Farmers support</a>
+        <a href="#" class="text-white text-3xl font-semibold uppercase hover:text-gray-300">FARMER SUPPORT</a>
         <button @click="isOpen = !isOpen" class="text-white text-3xl focus:outline-none">
           <i x-show="!isOpen" class="fas fa-bars"></i>
           <i x-show="isOpen" class="fas fa-times"></i>
@@ -168,8 +168,8 @@
     {% block content %}
 
     
-    <div class="text-5xl text-green-900 text-center mt-20 md:text-8xl lg:w-full ">
-      <div>Farmer support</div>
+    <div class="text-4xl text-green-900 text-center font-bold mt-20 md:text-8xl lg:w-full ">
+      <div>FARMER SUPPORT</div>
 
     </div>
     <div class=" grid justify-center mt-16 lg:hidden  ">
