--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -31,6 +31,13 @@
                     <td class="px-4 lg:px-6 py-4">{{ item.price }}</td>
                     <td class="px-4 lg:px-6 py-4 w-28"><img src="{{ item.product.image.url }}" alt=""></td>
                     <td x-data="{ open: false }" class="text-center mt-10 mb-10">
+                        
+                        <a href="{% url 'sell_buy_cart' id=item.product.id cart=item.id %}">
+                            <button class="my-2 h-12 bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded items-center justify-center">
+                                เช่า
+                            </button>
+                        </a>
+                        
                         <button @click="open = true"
                             class="my-2 h-12 bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded items-center justify-center">
                             <i class="fa-solid fa-trash"></i>&nbsp;&nbsp;ลบ
