--- a/shop/templates/shop/edit_product.html
+++ b/shop/templates/shop/edit_product.html
@@ -1,8 +1,4 @@
-<!-- <form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Edit</button>
-</form> -->
+<!-- 
 
 {% extends 'main/base.html' %}
 
@@ -86,4 +82,4 @@
 
 
 
-{% endblock %}
+{% endblock %} -->
