--- a/shop/templates/shop/show_product.html
+++ b/shop/templates/shop/show_product.html
@@ -32,7 +32,8 @@
 </div>
 
 <div class="lg:flex">
-    <div class="w-full lg:h-screen lg:w-72 bg-gray-400">
+
+    <div class="w-full lg:max-h-full lg:w-72 bg-gray-400">
         <p class="text-lg font-semibold mb-4 text-center">หมวดหมู่</p>
 
         <ul class="text-center flex justify-between lg:grid lg:grid-cols-1 p-2 ">
@@ -47,7 +48,9 @@
         <a class="hover:scale-105 transform transition h-fit duration-300 ease-in-out "
             href="{% url 'Showdetall_product' i.id %}">
             <div class="border bg-green-100 rounded-lg h-full">
+                {% if i.image %}
                 <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
+                {% endif %}
                 <div class="p-4">
                     <h5 class="text-lg font-semibold">
                         {% if i.id %}
