--- a/shop/templates/shop/show_product_search.html
+++ b/shop/templates/shop/show_product_search.html
@@ -35,15 +35,17 @@
 </div>
 
 <div class="lg:flex">
-    <div class="w-full lg:h-screen lg:w-72 bg-gray-400">
+
+    <div class="w-full lg:max-h-full lg:w-72 bg-gray-400">
         <p class="text-lg font-semibold mb-4 text-center">หมวดหมู่</p>
 
-        <ul class="text-center flex justify-between lg:grid lg:grid-cols-1 p-2">
-            <li><a href="#">หมวดหมู่ 1</a></li>
-            <li><a href="#">หมวดหมู่ 2</a></li>
-            <li><a href="#">หมวดหมู่ 3</a></li>
+        <ul class="text-center flex justify-between lg:grid lg:grid-cols-1 p-2 ">
+            {% for c in category %}
+            <li><a href="{% url 'product_category' c.id %}">{{ c.category_name}}</a></li>
+            {% endfor %}
         </ul>
     </div>
+
     <div class="grid grid-cols-2 lg:grid-cols-6 gap-3 m-2 col-start-2 ">
         
         {% if show_product %}
