--- a/shop/templates/shop/showdetall_product.html
+++ b/shop/templates/shop/showdetall_product.html
@@ -6,7 +6,7 @@
 
     <h3 class="text-3xl font-semibold mb-4 ms-5 mt-5">แสดงรายละเอียดอุปกรณ์</h3>
 
-    
+
     <div class="flex flex-wrap items-start border border-gray-300 rounded-lg p-4 mb-4 ">
 
         <div class="w-1/4 pr-10">
@@ -36,7 +36,7 @@
             <div class="mb-4">
                 <p>สิ้นสุดวันปล่อยเช่า: {{ product.lastdate }}</p>
             </div>
-            
+
             <div class="mb-4">
                 <p>จำนวน: {{ product.quantity }} ชิ้น</p>
             </div>
@@ -47,16 +47,33 @@
         </div>
 
     </div>
-   
+
 
     <div class="flex justify-between mt-8 mx-20">
-        <a href="{% url 'add_sell_buy' product.id %}">
-            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-lg">เช่าอุปกรณ์</button>
-        </a>
+        <div x-data="{ open: false }">
+
+            <button @click="open = true" class="bg-blue-500 text-white px-4 py-2 rounded-lg">
+                เช่าอุปกรณ์
+            </button>
+            <div x-show="open" @click.away="open = false"
+                class="  fixed inset-0 flex items-center justify-center bg-black bg-opacity-50">
+                <div
+                    class="bg-white p-6 w-11/12 max-w-lg mx-auto rounded shadow-xl border border-[#2B3843] text-center">
+                    <p class="text-xl font-family mb-4">เช่าอุปกรณ์</p>
+                    <p>ยืนยันการเช่า</p>
+                    <div class="text-center">
+                        <a href="{% url 'add_sell_buy' product.id %}"
+                            class="mt-4 bg-green-400 hover:bg-cover text-white px-4 py-2.5 rounded mr-5">ยืนยัน</a>
+                        <button @click="open = false" class="mt-4 bg-gray-500 text-white px-4 py-2 rounded">ปิด</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
         <form action="{% url 'add_to_cart' product.id  %}" class="mr-4">
             <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-lg">เพิ่มลงตะกร้า</button>
         </form>
-        
+
     </div>
 </div>
 
