--- a/user/templates/users/See_rentals_product.html
+++ b/user/templates/users/See_rentals_product.html
@@ -5,25 +5,23 @@
 
 <div class="container mx-auto mt-12 text-center">
     <i class="fas fa-check-circle text-green-500 text-9xl mb-8"></i>
-    <h2 class="text-3xl font-bold">การเช่าสำเร็จ</h2>
-    
-    <div class="mt-8">
-        <a href="{% url 'show_product' %}" class="btn btn-success bg-green-300">เช่าอุปกรณ์เพิ่มเติม</a>
-    </div>
+    <h2 class="text-3xl font-bold">รายละเอียด ผู้เช่า-การเช่า</h2>
 </div>
 
 <div class="container mx-auto w-2/2 p-12 mt-12 mb-12">
     <div class="bg-gray-100">
         <div class="grid grid-cols-3 p-5">
-            <div class="font-bold">ที่อยู่ผู้ปล่อยเช่า</div>
-            <div class="font-medium text-sm">ที่อยู่ผู้ปล่อยเช่า</div>
+            <div class="font-bold">ที่อยู่ผู้เช่า</div>
+            <div class="font-medium text-sm">ที่อยู่ผู้เช่า</div>
             <div class="font-medium text-sm">โทร</div>
 
         </div>
         <div class="grid grid-cols-3 p-5">
-            <div class="font-bold"></div>
-            <div class="font-medium text-sm">{{product.product_location}}</div>
-            <div class="font-medium text-sm">{{ product.phon_number }}</div>
+            {% for user in users %}
+            <div class="font-bold">{{user.}}</div>
+            <div class="font-medium text-sm">{{user.product.locations}}</div>
+            <div class="font-medium text-sm">{{ user.product.phon_number }}</div>
+            {% endfor %}
         </div>
     </div>
 
@@ -36,11 +34,13 @@
             <div class="font-medium text-sm">ราคา</div>
         </div>
         <div class="p-5">
+            {% for user in users %}
             <div class="grid grid-cols-3 p-5 bg-white">
-                <div class="font-medium text-sm">{{product.product_name}}</div>
-                <div class="font-medium text-sm">{{ product.datetime }}</div>
-                <div class="font-medium text-sm">{{ product.product_price|intcomma }}</div>
+                <div class="font-medium text-sm">{{user.product.product_name}}</div>
+                <div class="font-medium text-sm">{{ user.product.datetime }}</div>
+                <div class="font-medium text-sm">{{ user.product.product_price|intcomma }}</div>
             </div>
+            {% endfor %}
         </div>
 
     </div>
