--- a/user/templates/users/edit_sell_product.html
+++ b/user/templates/users/edit_sell_product.html
@@ -18,33 +18,52 @@
                     <th scope="col" class="px-4 lg:px-6 py-3">จำนวน</th>
                     <th scope="col" class="px-4 lg:px-6 py-3">ราคา</th>
                     <th scope="col" class="px-4 lg:px-6 py-3">รูป</th>
+                    <th scope="col" class="px-4 lg:px-6 py-3">การสั่งจอง</th>
                     <th scope="col" class="px-4 lg:px-6 py-3 text-center">การดำเนินการ</th>
                 </tr>
             </thead>
             <tbody>
                 {% for i in sell %}
-                <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+                <tr
+                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                     <td class="w-4 p-4">
                         <div class="flex items-center"></div>
                     </td>
-                    <td class="px-4 lg:px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ i.user }}</td>
+                    <td class="px-4 lg:px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ i.user}}</td>
                     <td class="px-4 lg:px-6 py-4">{{ i.product_name }}</td>
                     <td class="px-4 lg:px-6 py-4">{{ i.quantity }}</td>
                     <td class="px-4 lg:px-6 py-4">{{ i.product_price }}</td>
-                    <td class="px-4 lg:px-6 py-4 w-28"><img src="{{ i.image.url }}" alt=""></td>
+                    <td class="px-4 lg:px-6 py-4 w-28">{% if i.image %}<img src="{{ i.image.url }}" alt="">{% endif %}
+                    </td>
+                    <td class="px-4 lg:px-6 py-4">
+                        <a href="{% url 'See_rentals_product' i.id %}">
+                            <i class="fa-regular fa-bell fa-2x"></i>
+                        </a>
+                    </td>
                     <td x-data="{ open: false }" class="text-center mt-10 mb-10">
+
+                        <a href="{% url 'edit_product' i.id %}">
+                            <button
+                                class="my-2 h-12 bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded items-center justify-center">
+                                แก้ไข
+                            </button>
+                        </a>
+
                         <button @click="open = true"
                             class="my-2 h-12 bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded items-center justify-center">
                             <i class="fa-solid fa-trash"></i>&nbsp;&nbsp;ลบ
                         </button>
-                        <div x-show="open" @click.away="open = false" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50">
-                            <div class="bg-white p-6 w-11/12 max-w-lg mx-auto rounded shadow-xl border border-[#2B3843] text-center">
+                        <div x-show="open" @click.away="open = false"
+                            class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50">
+                            <div
+                                class="bg-white p-6 w-11/12 max-w-lg mx-auto rounded shadow-xl border border-[#2B3843] text-center">
                                 <p class="text-xl font-family mb-4">ลบอุปกรณ์</p>
                                 <p>ยืนยันการลบ</p>
                                 <div class="text-center">
-                                    <a href=""
+                                    <a href="{% url 'delete_sell' i.id %}"
                                         class="mt-4 bg-[#E81C03] hover:bg-cover text-white px-4 py-2.5 rounded mr-5">ยืนยัน</a>
-                                    <button @click="open = false" class="mt-4 bg-gray-500 text-white px-4 py-2 rounded">ปิด</button>
+                                    <button @click="open = false"
+                                        class="mt-4 bg-gray-500 text-white px-4 py-2 rounded">ปิด</button>
                                 </div>
                             </div>
                         </div>
