--- a/shop/templates/shop/advice.html
+++ b/shop/templates/shop/advice.html
@@ -2,8 +2,8 @@
 
 {% block content %} 
 
-<div class="bg-gray-300 py-16 w-full h-3/5 lg:w-1/2 flex items-center justify-center mx-auto mt-16 rounded-lg">
-    <div class="text-red-500 mx-8 text-3xl ">
+<div class="bg-gray-300 py-16 w-full h-1/5 lg:w-1/2 flex items-center justify-center mx-auto mt-10 rounded-lg">
+    <div class="text-red-500 mx-8 lg:text-2xl ">
         <h4 class="text-4xl">* คำแนะนำและข้อควรระวังในการเช่าและปล่อยเช่าอุปกรณ์การเกษตร</h4>
         <p class="mt-4 ">1. ก่อนทำการเช่าหรือปล่อยเช่าอุปกรณ์ทุกครั้ง ควรถ่ายบัตรประชาชนของผู้เช่าและผู้ปล่อยเช่า</p>
         <p class="mt-4">2. ถ่ายรูปภาพติดใบหน้าพร้อมอุปกรณ์ทั้งผู้เช่าและผู้ปล่อยเช่าเพื่อจะใช้เป็นหลักฐานยืนยันว่าได้ทำการเช่ากันจริง</p>
@@ -11,9 +11,9 @@
 
     </div>
 </div>
-<div class="flex justify-center mt-16">
+<div class="flex justify-center mt-10">
     <form action="{% url 'show_product' %}">
-        <button type="submit" class="bg-blue-500 text-4xl text-white px-4 py-2 rounded-lg w-96 h-24 lg:w-36 lg:h-10 lg:text-xl">ยอมรับ</button>
+        <button type="submit" class="bg-blue-500 text-xl text-white px-4 py-2 rounded-lg w-28 h-10 lg:w-36 lg:h-10 lg:text-xl">ยอมรับ</button>
     </form>
 </div>
 
