--- a/main/templates/main/forgot_password.html
+++ b/main/templates/main/forgot_password.html
@@ -5,21 +5,33 @@
 
 {% block content %}
 
-<div class="text-xl text-center mt-5 mb-5 font-extrabold">ลืมรหัสผ่าน</div>
+<body class="min-h-screen "
+    style="background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
+    <div class="w-full h-full flex items-center justify-center ">
+        <div
+            class="rounded overflow-hidden w-96 h-fit bg-gray-900 bg-opacity-70 shadow-lg justify-center items-center mt-10">
+            <div class="flex flex-col items-center  ">
+                <span class="w-24 h-24 mt-4 bg-cover rounded-full"
+                    style="background-image: url(https://cdn.pixabay.com/photo/2016/11/14/04/17/buffalo-1822574_1280.jpg); "></span>
+                <div class="user-name mt-8 text-white text-xl mb-4">ลืมรหัสผ่าน</div>
+                <div class="text-white ">
+                    <form class="max-w-sm mx-auto" method="post" enctype="multipart/form-data">
 
-<div class="m-2">
-<form class="max-w-sm mx-auto" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <!-- {{ form|crispy }} -->
+                        {{ form.as_p }}
 
-    {% csrf_token %}
 
-    {{ form|crispy }}
-
-    <div class="text-center">
-    <button type="submit"
-        class="text-white bg-[#7e6663] hover:bg-white hover:text-black hover:border-2 font-medium rounded-lg text-sm py-2 px-5 mx-auto">รีเซ็ตรหัสผ่าน</button>
+                        <div class="text-center mt-8 mb-8">
+                            <button type="submit"
+                            class="w-auto px-4 py-2 flex justify-center text-white bg-blue-500 rounded hover:bg-blue-700 mx-auto ">รีเซ็ตรหัสผ่าน</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    </form>
-</div>
+</body>
 
 
 {% endblock %}
