--- a/main/templates/main/reset_password_confirm.html
+++ b/main/templates/main/reset_password_confirm.html
@@ -3,7 +3,41 @@
 
 {% block content %}
 
-<div class="text-xl text-center mt-5 mb-5 font-extrabold">ตั้งรหัสผ่านใหม่</div>
+<body class="min-h-screen "
+    style="background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
+    <div class="w-full h-full flex items-center justify-center ">
+        <div
+            class="rounded overflow-hidden w-96 h-fit bg-gray-900 bg-opacity-70 shadow-lg justify-center items-center mt-10">
+            <div class="flex flex-col items-center  ">
+                <span class="w-24 h-24 mt-4 bg-cover rounded-full"
+                    style="background-image: url(https://cdn.pixabay.com/photo/2016/11/14/04/17/buffalo-1822574_1280.jpg); "></span>
+                    <div class="mt-8 text-white text-xl mb-4">ตั้งรหัสผ่านใหม่</div>
+                <div class="text-white p-4 ">
+                    <form class="max-w-sm mx-auto" action="" method="post" enctype="multipart/form-data">
+
+                        {% csrf_token %}
+                        <!-- {{ form|crispy }} -->
+                        {{ form.as_p }}
+                        
+                        <div class="text-center mt-8 mb-8">
+                            <button type="submit"
+                                class="w-auto px-4 py-2 flex justify-center text-white bg-blue-500 rounded hover:bg-blue-700 mx-auto">บันทึกรหัสผ่าน</button>
+                        </div>
+                    </form>
+                    <div class="m-2">
+                        <div class="max-w-sm mx-auto">
+                    
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+
+{% endblock %}
+
+<!-- <div class="text-xl text-center mt-5 mb-5 font-extrabold">ตั้งรหัสผ่านใหม่</div>
 
 <div class="m-2">
     <form class="max-w-sm mx-auto" action="" method="post" enctype="multipart/form-data">
@@ -22,6 +56,5 @@
     <div class="max-w-sm mx-auto">
 
     </div>
-</div>
+</div> -->
 
-{% endblock %}
