--- a/user/templates/registration/login.html
+++ b/user/templates/registration/login.html
@@ -1,126 +1,34 @@
 {% extends 'main/base.html' %}
-
+{% load crispy_forms_tags %}
 
 {% block content %} 
 
-<style>
 
-*{
-    margin: 0;
-    padding: 0;
-}
-
-html{
-    width: 100vw;
-    height: 100vh;
-}
-
-body{
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: top;
-    background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg);
-    width: 100%;
-    height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    letter-spacing: 0.02em;
-    font-weight: 400;  
-}
-
-.blurred-box{
-    position: fixed;
-    width: 250px;
-    height: 450px;
-    top: calc(50% - 175px);
-    left: calc(50% - 125px);
-    background:inherit ;
-    border-radius: 2px;
-    overflow: hidden;
-}
-
-.blurred-box::after{
-    content: '';
-    width: 300px;
-    height: 300px;
-    background: inherit;
-    position: absolute;
-    left: -20px;
-    right: 0;
-    top: -25px;
-    bottom: 0;
-    box-shadow: inset 0 0 0 200px rgba(255, 255,255, 0.05);
-    filter: blur(50px);
-}
-
-.user-login-box{
-    position: relative;
-    margin-top: 30px;
-    text-align: center;
-    z-index: 1;
-}
-
-.user-login-box > *{
-    
-    display: inline-block;
-    width: 200px;
-    height: 30px;
-    margin: 4px;
-    
-}
-
-.user-icon{
-    width: 100px;
-    height: 100px;
-    position: relative;
-    border-radius: 50%;
-    background-size: contain;
-    background-image: url(https://cdn.pixabay.com/photo/2016/11/14/04/17/buffalo-1822574_1280.jpg);
-}
-
-.user-name{
-    margin-top: 15px;
-    margin-bottom: 15px;
-    color: black;
-}
-
-.input.user-username{
-    margin-bottom: 4px;
-}
-
-.input.user-username,.input.user-password{
-    
-    display: block;
-    width: 200px;
-    height: 18px;
-    opacity: 0.4;
-    border-radius: 2px;
-    padding: 15px 15px;
-    border: none;
-    margin: 0 auto;
-    outline: none;
-}
-
-
-
-</style>
-
-
-<body>
-    <div class="blurred-box">
-
-        <div class="user-login-box">
-            <span class="user-icon"></span>
-            <div class="user-name">เข้าสู่ระบบ</div>
-            <form action="{% url 'login' %}" method="post">
-                {% csrf_token %}
-                {{ form.as_p }} <br>
-                <button type="submit">เข้าสู่ระบบ</button>
-            </form>
-            
+<body class="min-h-screen "
+    style="background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
+    <div class="w-full h-full flex items-center justify-center ">
+        <div class="rounded overflow-hidden w-96 h-fit bg-gray-900 bg-opacity-70 shadow-lg justify-center items-center mt-10">
+            <div class="flex flex-col items-center  ">
+                <span class="w-24 h-24 mt-4 bg-cover rounded-full"
+                    style="background-image: url(https://cdn.pixabay.com/photo/2016/11/14/04/17/buffalo-1822574_1280.jpg); "></span>
+                    <div class="user-name mt-8 text-white text-xl mb-4">เข้าสู่ระบบ</div>
+                <div class="text-white p-4 ">
+                    <form action="{% url 'login' %}" method="post">
+                        {% csrf_token %}
+                        <!-- {{ form|crispy}} -->
+                        {{ form.as_p }} 
+                        <div class="form-field mt-8 text-center">
+                            <button class="w-auto px-4 py-2 flex justify-center text-white bg-blue-500 rounded hover:bg-blue-700 mx-auto " type="submit">เข้าสู่ระบบ</button>
+                        </div>
+                        
+                    </form>
+                    <div class="text-center mt-7 mb-4">
+                        <a href="/password_reset/">ลืมรหัสผ่าน</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <a href="/password_reset/">ลืมรหัสผ่าน</a>
-
     </div>
 </body>
+
 {% endblock %} 
