--- a/user/templates/users/register.html
+++ b/user/templates/users/register.html
@@ -1,156 +1,56 @@
 {% extends 'main/base.html' %}
 
+{% load crispy_forms_tags %}
 
-{% block content %} 
+{% block content %}
 
-<style>
+<body class="min-h-screen "
+    style="background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
+    <div class="w-full h-full flex items-center justify-center ">
+        <div class="rounded overflow-hidden w-96 h-fit bg-gray-900 bg-opacity-70 shadow-lg justify-center items-center mt-10">
+            <div class="flex flex-col items-center  ">
+                <span class="w-24 h-24 mt-4 bg-cover rounded-full"
+                    style="background-image: url(https://cdn.pixabay.com/photo/2016/11/14/04/17/buffalo-1822574_1280.jpg); "></span>
+                <div class="mt-8 text-white text-xl">สมัครสมาชิก</div>
+                <div class="text-white">
+                    <form action="{% url 'register' %}" method="POST" class="w-full grid-cols-1 p-5">
+                        {% csrf_token %}
+                        {{ form.non_field_errors }}
 
-*{
-    margin: 0;
-    padding: 0;
-}
-
-html{
-    width: 100vw;
-    height: 100vh;
-}
-
-body{
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: top;
-    background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg);
-    width: 100%;
-    height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    letter-spacing: 0.02em;
-    font-weight: 400;  
-}
-
-.blurred-box{
-    position: fixed;
-    width: 250px;
-    height: 550px;
-    top: calc(50% - 175px);
-    left: calc(50% - 125px);
-    background:inherit ;
-    border-radius: 2px;
-    overflow: hidden;
-}
-
-.blurred-box::after{
-    content: '';
-    width: 300px;
-    height: 450px;
-    background: inherit;
-    position: absolute;
-    left: -20px;
-    right: 0;
-    top: -25px;
-    bottom: 0;
-    box-shadow: inset 0 0 0 200px rgba(255, 255,255, 0.05);
-    filter: blur(50px);
-}
-
-.user-register-box{
-    position: relative;
-    margin-top: 30px;
-    text-align: center;
-    z-index: 1;
-}
-
-.user-register-box > *{
-    display: inline-block;
-    width: 200px;
-    height: 30px;
-    margin: 2px;
-    
-}
-
-.user-icon{
-    width: 100px;
-    height: 100px;
-    position: relative;
-    border-radius: 50%;
-    background-size: contain;
-    background-image: url(https://cdn.pixabay.com/photo/2016/11/14/04/17/buffalo-1822574_1280.jpg);
-}
-
-
-
-.user-email{
-    color: black;
-}
-.user-name{
-    margin-top: 2px;
-    margin-bottom: 4px;
-    color: black;
-}
-
-.input.user-username{
-    margin-bottom: 4px;
-}
-
-.input.user-username,.input.user-password{
-    display: block;
-    width: 200px;
-    height: 18px;
-    opacity: 0.4;
-    border-radius: 2px;
-    padding: 15px 15px;
-    border: none;
-    margin: 0 auto;
-    outline: none;
-}
-.form-field{
-    margin-top: 0.5rem;
-}
-
-
-
-</style>
-
-
-<body>
-    <div class="blurred-box">
-
-        <div class="user-register-box">
-            <span class="user-icon"></span>
-            <div class="user-name">สมัครสมาชิก</div>
-            <form action="{% url 'register' %}" method="POST">
-                {% csrf_token %}
-                {{ form.non_field_errors }}
-                <div class="form-field">
-                  {{ form.username.label_tag }}
-                  {{ form.username }}
-                  {{ form.username.errors }}
+                        <!-- {{ form|crispy}} -->
+                        <div class="form-field mb-4">
+                            {{ form.username.label_tag }}
+                            {{ form.username }}
+                            {{ form.username.errors }}
+                        </div>
+                        <div class="form-field mb-4">
+                            {{ form.email.label_tag }}
+                            {{ form.email }}
+                            {{ form.email.errors }}
+                        </div>
+                        <div class="form-field mb-4">
+                            {{ form.password1.label_tag }}
+                            {{ form.password1 }}
+                            {{ form.password1.errors }}
+                        </div>
+                        <div class="form-field mb-4">
+                            {{ form.password2.label_tag }}
+                            {{ form.password2 }}
+                            {{ form.password2.errors }}
+                        </div>
+                        <div class="form-field mt-8 text-center">
+                            <button
+                                class="w-auto px-4 py-2 flex justify-center text-white bg-blue-500 rounded hover:bg-blue-700 mx-auto"
+                                type="submit">สมัครสมาชิก</button>
+                        </div>
+                    </form>
+                    <p class="text-center mb-7">
+                        <a href="{% url 'login' %}" class="text-white hover:underline ">เข้าสู่ระบบ</a>
+                    </p>
                 </div>
-                <div class="form-field">
-                  {{ form.email.label_tag }}
-                  {{ form.email }}
-                  {{ form.email.errors }}
-                </div>
-                <div class="form-field">
-                  {{ form.password1.label_tag }}
-                  {{ form.password1 }}
-                  {{ form.password1.errors }}
-                </div>
-                <div class="form-field">
-                  {{ form.password2.label_tag }}
-                  {{ form.password2 }}
-                  {{ form.password2.errors }}
-                </div><br>
-                <div class="form-field">
-                  <button class="button button-primary" type="submit">สมัครสมาชิก</button>
-                </div><br>
-                <p>
-                  <a href="{% url 'login' %}">เข้าสู่ระบบ</a>
-                </p>
-              </form>
-            
+            </div>
         </div>
-
     </div>
 </body>
-{% endblock %} 
+
+{% endblock %}
