--- a/shop/templates/shop/Complete_buyproduct.html
+++ b/shop/templates/shop/Complete_buyproduct.html
@@ -9,6 +9,11 @@
     <h2 class="text-3xl font-bold">รายละเอียด ผู้เช่า-การเช่า</h2>
 </div>
 
+<div class="flex justify-center space-x-4 lg:space-x-20 mt-3 mb-3">
+    <a href="{% url 'show_product' %}"
+        class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-700">เช่าอุปกรณ์เพิ่มเติม</a>
+</div>
+
 <div class="container mx-auto w-2/2 p-12 mt-12 mb-12">
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
