--- a/shop/templates/shop/show_product_province.html
+++ b/shop/templates/shop/show_product_province.html
@@ -68,46 +68,50 @@
         </ul>
     </div>
 
-    <div class="grid grid-cols-2 lg:grid-cols-6 gap-3 m-2 col-start-2">
+    <div class="grid grid-cols-2 lg:grid-cols-6 gap-3 m-2 col-start-2 h-full ">
         {% for i in allproduct %}
         {% if i.quantity > 0 %}
-        <a class="hover:scale-105 transform transition h-fit duration-300 ease-in-out "
-            href="{% url 'Showdetall_product' i.id %}">
-            <div class="border bg-green-100 rounded-lg h-full">
+        <a class="hover:scale-105 transform transition duration-300 ease-in-out" href="{% url 'Showdetall_product' i.id %}">
+            <div class="border bg-green-100 rounded-lg product-box">
+                {% if i.image %}
                 <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
-                <div class="p-4">
-                    <h5 class="text-lg font-semibold">
+                {% endif %}
+                <div class="p-4 content">
+                    <h5 class="text-lg font-semibold mb-2">
                         {% if i.id %}
-                        <div class="text-blue-500">{{ i.product_name }}</div>
+                        <div class="text-blue-500 truncate">{{ i.product_name }}</div>
                         {% else %}
                         <span class="text-red-500">No ID available for this product</span>
                         {% endif %}
                     </h5>
-                    <p class="text-gray-800">ราคา: {{ i.product_price }}</p>
-                    <p class="text-gray-800">สถานะอุปกรณ์: {{ i.product_status }}</p>
-                    <p class="text-gray-800">ที่อยู่อุปกรณ์: {{ i.product_location }} {{ i.province }}</p>
-                    <p class="text-gray-800">จำนวน: {{ i.quantity }} ชิ้น</p>
+                    <p class="text-gray-800 truncate">ราคา: {{ i.product_price }}</p>
+                    <p class="text-gray-800 truncate">สถานะอุปกรณ์: {{ i.product_status }}</p>
+                    <p class="text-gray-800 truncate">ที่อยู่อุปกรณ์: {{ i.product_location }} {{ i.province }}</p>
+                    <p class="text-gray-800 truncate">จำนวน: {{ i.quantity }} ชิ้น</p>
                 </div>
             </div>
         </a>
+        
         {% else %}
-
-        <div class="border bg-red-300 rounded-lg h-fit">
+        <div class="border bg-red-300 rounded-lg product-box">
+            {% if i.image %}
             <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
-            <div class="p-4">
-                <h5 class="text-lg font-semibold">
+            {% endif %}
+            <div class="p-4 content">
+                <h5 class="text-lg font-semibold mb-2">
                     {% if i.id %}
-                    <div class="text-blue-500">{{ i.product_name }}</div>
+                    <div class="text-blue-500 truncate">{{ i.product_name }}</div>
                     {% else %}
                     <span class="text-red-500">No ID available for this product</span>
                     {% endif %}
                 </h5>
-                <p class="text-gray-800">ราคา: {{ i.product_price }}</p>
-                <p class="text-gray-800">สถานะอุปกรณ์: หมด</p>
-                <p class="text-gray-800">ที่อยู่อุปกรณ์: {{ i.product_location }}</p>
-                <p class="text-gray-800">จำนวน: {{ i.quantity }} ชิ้น</p>
+                <p class="text-gray-800 truncate">ราคา: {{ i.product_price }}</p>
+                <p class="text-gray-800 truncate">สถานะอุปกรณ์: หมด</p>
+                <p class="text-gray-800 truncate">ที่อยู่อุปกรณ์: {{ i.product_location }} {{ i.province }}</p>
+                <p class="text-gray-800 truncate">จำนวน: {{ i.quantity }} ชิ้น</p>
             </div>
         </div>
+
 
         {% endif %}
         {% endfor %}
