--- a/user/templates/users/edit_profile.html
+++ b/user/templates/users/edit_profile.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <body class="min-h-screen bg-cover bg-center"
-    style="background-image: url('https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg');">
+style="background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
     <div class="flex items-center justify-center min-h-screen bg-gray-900 bg-opacity-50">
         <div class="relative w-full max-w-md p-8 bg-gray-800 bg-opacity-75 rounded-lg shadow-lg ">
             <div class="text-center text-white">
