--- a/user/templates/users/view_rental_history.html
+++ b/user/templates/users/view_rental_history.html
@@ -31,7 +31,7 @@
                     <td class="px-4 lg:px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                         {{i.product.user }}</td>
                     <td class="px-4 lg:px-6 py-4">{{ i.product.product_name }}</td>
-                    <td class="px-4 lg:px-6 py-4">{{ i.product.quantity }}</td>
+                    <td class="px-4 lg:px-6 py-4">{{ i.quantity }}</td>
                     <td class="px-4 lg:px-6 py-4">{{ i.product.product_price }}</td>
                     <td class="px-4 lg:px-6 py-4 w-28"><img src="{{ i.product.image.url }}" alt=""></td>
                     
@@ -47,7 +47,7 @@
                                 <p class="text-xl font-family mb-4">ลบอุปกรณ์</p>
                                 <p>ยืนยันการลบ</p>
                                 <div class="text-center">
-                                    <a href="{% url 'delete_buy' i.product.id %}"
+                                    <a href="{% url 'delete_buy' i.id %}"
                                         class="mt-4 bg-[#E81C03] hover:bg-cover text-white px-4 py-2.5 rounded mr-5">ยืนยัน</a>
                                     <button @click="open = false"
                                         class="mt-4 bg-gray-500 text-white px-4 py-2 rounded">ปิด</button>
