--- a/shop/templates/shop/show_product_search.html
+++ b/shop/templates/shop/show_product_search.html
@@ -77,9 +77,9 @@
         {% if show_product %}
         {% for i in show_product %}
         {% if i.quantity > 0 %}
-        <a class="hover:scale-105 transform transition duration-300 ease-in-out"
-            href="{% url 'Showdetall_product' i.id %}">
-            <div class="border bg-green-100 rounded-lg product-box">
+        <a class="hover:scale-105 transform transition duration-300 ease-in-out {% if i.id in expired_products %}pointer-events-none{% endif %}"
+            href="{% if i.id not in expired_products %}{% url 'Showdetall_product' i.id %}{% endif %}">
+            <div class="border {% if i.id in expired_products %}bg-red-300{% else %}bg-green-100{% endif %} rounded-lg product-box">
                 {% if i.image %}
                 <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
                 {% endif %}
